--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,39 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Assignment Solution for Module 2</title>
+</head>
+
+<body>
+    <h1>Our Menu</h1>
+    <div class="boxes">
+        <div class="box box1">
+            <p class="title title1">Chicken</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolores eveniet iusto quaerat perferendis eum et laudantium dicta dolorum delectus asperiores debitis voluptas obcaecati voluptate reprehenderit facilis, qui iste. Ullam?
+                Cupiditate, eos officiis minus culpa molestias nihil fugiat alias similique esse est dolore, obcaecati error incidunt quis molestiae eum blanditiis mollitia accusantium veritatis. Cumque, facilis in esse praesentium doloribus eum.
+            </p>
+        </div>
+
+        <div class="box box2">
+            <p class="title title2">Chicken</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolores eveniet iusto quaerat perferendis eum et laudantium dicta dolorum delectus asperiores debitis voluptas obcaecati voluptate reprehenderit facilis, qui iste. Ullam?
+                Cupiditate, eos officiis minus culpa molestias nihil fugiat alias similique esse est dolore, obcaecati error incidunt quis molestiae eum blanditiis mollitia accusantium veritatis. Cumque, facilis in esse praesentium doloribus eum.
+            </p>
+        </div>
+
+        <div class="box box3">
+            <p class="title title3">Chicken</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolores eveniet iusto quaerat perferendis eum et laudantium dicta dolorum delectus asperiores debitis voluptas obcaecati voluptate reprehenderit facilis, qui iste. Ullam?
+                Cupiditate, eos officiis minus culpa molestias nihil fugiat alias similique esse est dolore, obcaecati error incidunt quis molestiae eum blanditiis mollitia accusantium veritatis. Cumque, facilis in esse praesentium doloribus eum.
+            </p>
+        </div>
+    </div>
+</body>
+
+</html>
