--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,2 +1,121 @@
-<html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <title>Module 3</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+
+    <nav class="navbar navbar-default" id="navbar">
+        <div class="container">
+            <div id="gotop"></div>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header" id="navbar-name">
+                <button id="toggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" id="brandname" href="#">Food LLC</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right" id="nav-list">
+                    <li><a href="#chicken">Chicken</a></li>
+                    <li><a href="#beef">Beef</a></li>
+                    <li><a href="#sushi">Sushi</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <div class="container">
+
+        <h1 id="headtitle">Our Menu</h1>
+        <div class="card">
+            <h2 class="modal-title" id="chicken">Chicken</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, ea ducimus ipsa facilis aperiam aspernatur voluptatum nisi? Nisi modi fuga impedit repellendus voluptas cum, nam minus eum quis culpa repellat. Animi voluptatibus molestiae,
+                dolores tempore nobis consequuntur reprehenderit quod ut, vero veritatis ab illo voluptatum esse. Voluptatibus officia aut sunt deserunt nostrum dignissimos, dicta assumenda nesciunt recusandae excepturi ratione aspernatur? Vero amet facilis
+                laborum numquam. Modi dolor, doloremque praesentium ad cum rerum aut optio tenetur iure repellat placeat expedita at, fugiat natus nisi omnis consequuntur labore, totam voluptatem nesciunt ex. Sunt aperiam temporibus vitae nemo quidem
+                enim, fugit optio explicabo atque blanditiis necessitatibus quia sint perspiciatis maxime, nihil doloremque ad! Delectus corporis officia animi debitis ducimus velit quidem voluptates amet? Quam, soluta culpa? Cumque nobis in atque rerum
+                suscipit iste autem maxime sint odio laudantium facere odit, ipsam fuga neque ratione unde nam nulla enim omnis quaerat, debitis obcaecati incidunt? Possimus et, quibusdam quam placeat esse suscipit tempora expedita quos rem perspiciatis
+                quidem corrupti blanditiis dolorum non voluptas eos nulla, consectetur magnam, magni totam! Voluptatum enim quidem deleniti asperiores vel? Dolores maxime perspiciatis quisquam nobis eius officiis nisi. Dolor, cum sapiente? Quasi neque
+                totam ipsam voluptatibus perspiciatis dolores quia aperiam cumque illo porro dignissimos, iure tenetur vitae! Excepturi, quae eligendi? Consequuntur, omnis asperiores, perferendis blanditiis iure totam magni accusamus incidunt iste doloribus
+                fugit minus corporis nesciunt dolore praesentium dolorum eius voluptate odio quidem delectus expedita obcaecati quo non dolorem. Optio. Nobis deleniti maiores unde iure culpa voluptatem reiciendis, illum distinctio fugiat, dicta itaque
+                odit, quaerat ex quisquam? Sed quas commodi atque error, culpa beatae, maiores modi distinctio maxime, facilis id! Veritatis sed consectetur quia explicabo provident numquam voluptatibus magnam non vero quos inventore at, repudiandae rem
+                error nobis quidem doloremque labore vel alias illum. Illo, quo! Eaque sapiente nisi consectetur? Velit hic sunt ullam expedita labore sit assumenda dignissimos totam magni delectus nam earum quaerat commodi, at maiores veritatis atque
+                rerum fuga? Suscipit ipsum corrupti perferendis esse reprehenderit ratione numquam? Repellendus porro itaque aliquid odio consectetur nesciunt earum consequatur, optio ducimus non soluta quidem nisi, illo error voluptas, dolor quaerat.
+                Illum aspernatur dicta possimus dolorem magni odio quam, esse voluptate! Laudantium minus provident dolore. In facere porro necessitatibus maiores nisi odit veritatis quod doloremque pariatur saepe nihil aliquam sunt ut ratione libero
+                perferendis, culpa eum molestias at eius dignissimos alias! Impedit libero quos esse consequatur quaerat quas voluptas. Consectetur, enim iste illo eum quasi cum placeat asperiores blanditiis, nemo quisquam commodi sapiente eveniet sunt
+                numquam. Aliquid ad nihil assumenda molestias. Possimus praesentium veniam in corporis nemo earum aliquid, aut laudantium ex unde saepe perspiciatis molestiae? Ad libero nesciunt aliquam tenetur dolor totam et eius veritatis deserunt aspernatur
+                earum, quam suscipit.<a href="#gotop"><span id="top" class="visible-xs">Go to Top</span></a></p>
+        </div>
+
+        <div class="card">
+            <h2 class="modal-title" id="beef">Beef</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, ea ducimus ipsa facilis aperiam aspernatur voluptatum nisi? Nisi modi fuga impedit repellendus voluptas cum, nam minus eum quis culpa repellat. Animi voluptatibus molestiae,
+                dolores tempore nobis consequuntur reprehenderit quod ut, vero veritatis ab illo voluptatum esse. Voluptatibus officia aut sunt deserunt nostrum dignissimos, dicta assumenda nesciunt recusandae excepturi ratione aspernatur? Vero amet facilis
+                laborum numquam. Modi dolor, doloremque praesentium ad cum rerum aut optio tenetur iure repellat placeat expedita at, fugiat natus nisi omnis consequuntur labore, totam voluptatem nesciunt ex. Sunt aperiam temporibus vitae nemo quidem
+                enim, fugit optio explicabo atque blanditiis necessitatibus quia sint perspiciatis maxime, nihil doloremque ad! Delectus corporis officia animi debitis ducimus velit quidem voluptates amet? Quam, soluta culpa? Cumque nobis in atque rerum
+                suscipit iste autem maxime sint odio laudantium facere odit, ipsam fuga neque ratione unde nam nulla enim omnis quaerat, debitis obcaecati incidunt? Possimus et, quibusdam quam placeat esse suscipit tempora expedita quos rem perspiciatis
+                quidem corrupti blanditiis dolorum non voluptas eos nulla, consectetur magnam, magni totam! Voluptatum enim quidem deleniti asperiores vel? Dolores maxime perspiciatis quisquam nobis eius officiis nisi. Dolor, cum sapiente? Quasi neque
+                totam ipsam voluptatibus perspiciatis dolores quia aperiam cumque illo porro dignissimos, iure tenetur vitae! Excepturi, quae eligendi? Consequuntur, omnis asperiores, perferendis blanditiis iure totam magni accusamus incidunt iste doloribus
+                fugit minus corporis nesciunt dolore praesentium dolorum eius voluptate odio quidem delectus expedita obcaecati quo non dolorem. Optio. Nobis deleniti maiores unde iure culpa voluptatem reiciendis, illum distinctio fugiat, dicta itaque
+                odit, quaerat ex quisquam? Sed quas commodi atque error, culpa beatae, maiores modi distinctio maxime, facilis id! Veritatis sed consectetur quia explicabo provident numquam voluptatibus magnam non vero quos inventore at, repudiandae rem
+                error nobis quidem doloremque labore vel alias illum. Illo, quo! Eaque sapiente nisi consectetur? Velit hic sunt ullam expedita labore sit assumenda dignissimos totam magni delectus nam earum quaerat commodi, at maiores veritatis atque
+                rerum fuga? Suscipit ipsum corrupti perferendis esse reprehenderit ratione numquam? Repellendus porro itaque aliquid odio consectetur nesciunt earum consequatur, optio ducimus non soluta quidem nisi, illo error voluptas, dolor quaerat.
+                Illum aspernatur dicta possimus dolorem magni odio quam, esse voluptate! Laudantium minus provident dolore. In facere porro necessitatibus maiores nisi odit veritatis quod doloremque pariatur saepe nihil aliquam sunt ut ratione libero
+                perferendis, culpa eum molestias at eius dignissimos alias! Impedit libero quos esse consequatur quaerat quas voluptas. Consectetur, enim iste illo eum quasi cum placeat asperiores blanditiis, nemo quisquam commodi sapiente eveniet sunt
+                numquam. Aliquid ad nihil assumenda molestias. Possimus praesentium veniam in corporis nemo earum aliquid, aut laudantium ex unde saepe perspiciatis molestiae? Ad libero nesciunt aliquam tenetur dolor totam et eius veritatis deserunt aspernatur
+                earum, quam suscipit.<a href="#gotop"><span id="top" class="visible-xs">Go to Top</span></a></p>
+        </div>
+
+        <div class="card">
+            <h2 class="modal-title" id="sushi">Sushi</h2>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, ea ducimus ipsa facilis aperiam aspernatur voluptatum nisi? Nisi modi fuga impedit repellendus voluptas cum, nam minus eum quis culpa repellat. Animi voluptatibus molestiae,
+                dolores tempore nobis consequuntur reprehenderit quod ut, vero veritatis ab illo voluptatum esse. Voluptatibus officia aut sunt deserunt nostrum dignissimos, dicta assumenda nesciunt recusandae excepturi ratione aspernatur? Vero amet facilis
+                laborum numquam. Modi dolor, doloremque praesentium ad cum rerum aut optio tenetur iure repellat placeat expedita at, fugiat natus nisi omnis consequuntur labore, totam voluptatem nesciunt ex. Sunt aperiam temporibus vitae nemo quidem
+                enim, fugit optio explicabo atque blanditiis necessitatibus quia sint perspiciatis maxime, nihil doloremque ad! Delectus corporis officia animi debitis ducimus velit quidem voluptates amet? Quam, soluta culpa? Cumque nobis in atque rerum
+                suscipit iste autem maxime sint odio laudantium facere odit, ipsam fuga neque ratione unde nam nulla enim omnis quaerat, debitis obcaecati incidunt? Possimus et, quibusdam quam placeat esse suscipit tempora expedita quos rem perspiciatis
+                quidem corrupti blanditiis dolorum non voluptas eos nulla, consectetur magnam, magni totam! Voluptatum enim quidem deleniti asperiores vel? Dolores maxime perspiciatis quisquam nobis eius officiis nisi. Dolor, cum sapiente? Quasi neque
+                totam ipsam voluptatibus perspiciatis dolores quia aperiam cumque illo porro dignissimos, iure tenetur vitae! Excepturi, quae eligendi? Consequuntur, omnis asperiores, perferendis blanditiis iure totam magni accusamus incidunt iste doloribus
+                fugit minus corporis nesciunt dolore praesentium dolorum eius voluptate odio quidem delectus expedita obcaecati quo non dolorem. Optio. Nobis deleniti maiores unde iure culpa voluptatem reiciendis, illum distinctio fugiat, dicta itaque
+                odit, quaerat ex quisquam? Sed quas commodi atque error, culpa beatae, maiores modi distinctio maxime, facilis id! Veritatis sed consectetur quia explicabo provident numquam voluptatibus magnam non vero quos inventore at, repudiandae rem
+                error nobis quidem doloremque labore vel alias illum. Illo, quo! Eaque sapiente nisi consectetur? Velit hic sunt ullam expedita labore sit assumenda dignissimos totam magni delectus nam earum quaerat commodi, at maiores veritatis atque
+                rerum fuga? Suscipit ipsum corrupti perferendis esse reprehenderit ratione numquam? Repellendus porro itaque aliquid odio consectetur nesciunt earum consequatur, optio ducimus non soluta quidem nisi, illo error voluptas, dolor quaerat.
+                Illum aspernatur dicta possimus dolorem magni odio quam, esse voluptate! Laudantium minus provident dolore. In facere porro necessitatibus maiores nisi odit veritatis quod doloremque pariatur saepe nihil aliquam sunt ut ratione libero
+                perferendis, culpa eum molestias at eius dignissimos alias! Impedit libero quos esse consequatur quaerat quas voluptas. Consectetur, enim iste illo eum quasi cum placeat asperiores blanditiis, nemo quisquam commodi sapiente eveniet sunt
+                numquam. Aliquid ad nihil assumenda molestias. Possimus praesentium veniam in corporis nemo earum aliquid, aut laudantium ex unde saepe perspiciatis molestiae? Ad libero nesciunt aliquam tenetur dolor totam et eius veritatis deserunt aspernatur
+                earum, quam suscipit.<a href="#gotop"><span id="top" class="visible-xs">Go to Top</span></a></p>
+        </div>
+
+    </div>
+
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+</body>
+
 </html>
