--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -31,7 +31,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="brandname" href="#">Food LLC</a>
+                <a class="navbar-brand" id="brandname" href="/">Food LLC</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
