--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -52,7 +52,7 @@
 
     <div class="container">
 
-        <h1 id="headtitle">Our Menu</h1>
+        <h1 id="headtitle" class="text-center">Our Menu</h1>
         <div class="card">
             <h2 class="modal-title" id="chicken">Chicken</h2>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, ea ducimus ipsa facilis aperiam aspernatur voluptatum nisi? Nisi modi fuga impedit repellendus voluptas cum, nam minus eum quis culpa repellat. Animi voluptatibus molestiae,
